# Evil-Hangman

./: README.md  main.cpp  notes_meeting1.txt
Evil Hangman/: CMakeLists.txt  SDL_Plotter.h  alphabet.txt  color.h  letters.h  line.h  main.cpp  point.h  rectangle.h  shapes.h
Hangman Shell/main/: CMakeLists.txt  main.cpp  point.h
Letters/: Letter.cpp  Letter.h  Shapes.cpp  Shapes.h  letters.txt
Word Select/: dictionary.txt  main.cpp
Words Script/: output.txt  words.py
evilHangman/: CMakeLists.txt  color.h  letters.h  line.h  main.cpp  plot.h  point.h  rectangle.h
evilHangman/test/: test.depend  test.layout
main/: CMakeLists.txt  SDL_Plotter.h  color.h  letter.h  line.h  main.cpp  point.h  rectangle.h
prototype/: CMakeLists.txt  main.cpp
